// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blur 1`] = `
Object {
  "element": Object {
    "children": Array [
      "",
    ],
    "props": Object {
      "className": "root",
    },
    "tag": "div",
  },
  "hasFocus": false,
  "selection": Object {
    "_tag": "None",
  },
}
`;

exports[`focus 1`] = `
Object {
  "element": Object {
    "children": Array [
      "",
    ],
    "props": Object {
      "className": "root",
    },
    "tag": "div",
  },
  "hasFocus": true,
  "selection": Object {
    "_tag": "None",
  },
}
`;
